WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
105859
[BlackBerry] Cookies with an IP domain are not being loaded properly into memory
https://bugs.webkit.org/show_bug.cgi?id=105859
Summary
[BlackBerry] Cookies with an IP domain are not being loaded properly into memory
otcheung
Reported
2012-12-29 10:50:21 PST
The IP flag is not persisted. We need to check whether a domain is an IP again when we load cookies into memory.
Attachments
Patch
(1.79 KB, patch)
2012-12-29 10:55 PST
,
otcheung
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
otcheung
Comment 1
2012-12-29 10:55:48 PST
Created
attachment 180941
[details]
Patch
WebKit Review Bot
Comment 2
2012-12-29 11:12:10 PST
Comment on
attachment 180941
[details]
Patch Clearing flags on attachment: 180941 Committed
r138568
: <
http://trac.webkit.org/changeset/138568
>
WebKit Review Bot
Comment 3
2012-12-29 11:12:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug