[BlackBerry] Cookies with an IP domain are not being loaded properly into memory https://bugs.webkit.org/show_bug.cgi?id=105859

PR 271597

Patch by Otto Derek Cheung <otcheung@rim.com> on 2012-12-29
Reviewed by George Staikos.

The isIP flag isn't persistented in the database. We need to check it
again when we load it into memory.

* platform/blackberry/CookieManager.cpp:
(WebCore::CookieManager::getBackingStoreCookies):

Canonical link: https://commits.webkit.org/124052@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138568 268f45cc-cd09-0410-ab3c-d52691b4dbfc